<resources>
    <string name="app_name">Súper Agente Cliente</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="super_agente">Super Agente</string>
    <string name="msg_error_sin_conexion">Este aplicativo requiere una conexión a internet, por favor asegúrate de disponer de una conexión y vuelve a intentarlo.</string>
    <string name="msg_error_ingresar_nombre">Ingrese el nombre</string>
    <string name="msg_error_ingresar_apellido">Ingrese el apellido</string>
    <string name="msg_error_ingresar_email">Ingrese el email</string>
    <string name="msg_error_ingresar_movil">Ingrese el movil</string>
    <string name="msg_error_digito_control_dni">Ingrese el dígito de control del DNI</string>
    <string name="titulo_salir">Salir</string>
    <string name="title_confirmar">Confirmar</string>
    <string name="msg_confirmacion_salida">¿Seguro que desea salir?</string>
    <string name="titulo_si">Sí</string>
    <string name="titulo_no">No</string>
    <string name="password">Password</string>
    <string name="description">Ingrese Password</string>
    <string name="termCond">Acepto términos y condiciones</string>
    <string name="mensaje_celular_no_registrado">ELIJA "REINTENTAR" SI EL NÚMERO DE CELULAR INGRESADO NO ES CORRECTO O "REGISTRARSE" SI AÚN NO ES CLIENTE</string>
    <string name="mensaje_clave_errada_exceso_intentos">CLAVE ERRADA - EXCESO DE INTENTOS</string>
    <string name="intentos_mas_limite">HA INTENTADO INGRESAR SU CLAVE MÁS VECES QUE EL LÍMITE PERMITIDO, POR SU SEGURIDAD COMUNÍQUESE CON LA CENTRAL DE SERVICIO AL CLIENTE</string>
    <string name="mensaje_poder_hacer_pago">PARA PODER HACER UN PAGO DE TARJETAS NECESITA COMO MÍNIMO UNA TARJETA DE CRÉDITO Y UNA DE DÉBITO O</string>
    <string name="mail_asunto">CAMBIO DE CLAVE DE ACCESO</string>
    <string name="mail_mensaje">SU CLAVE DE ACCESO HA SIDO CAMBIADA. SI USTED NO SOLICITÓ ESTE CAMBIO, PORFAVOR CONTÁCTESE CON NOSTROS.</string>
    <string name="btn_aceptar">ACEPTAR</string>
    <string name="btn_salir">SALIR</string>
    <string name="btn_atras">ATRÁS</string>
    <string name="btn_menu">MENÙ</string>
    <string name="btn_siguiente">SIGUIENTE</string>
    <string name="btn_cancelar">CANCELAR</string>
    <string name="btn_moneda_nacional">MONEDA NACIONAL</string>
    <string name="btn_firmar">FIRMAR</string>
    <string name="btn_dolares">U$ DOLARES</string>
    <string name="btn_continuar">CONTINUAR</string>
    <string name="btn_ingrese_otra_cuenta">INGRESE OTRA CUENTA</string>
    <string name="btn_afiliar_transferencias">AFILIAR TRANSFERENCIAS</string>
    <string name="btn_terminar_afiliacion">TERMINAR AFILIACIÓN</string>
    <string name="btn_efectuar_otra_operacion">EFECTUAR OTRA OPERACIÓN</string>
    <string name="btn_entrar">ENTRAR</string>
    <string name="btn_otra_pregunta">INGRESAR PREGUNTA PROPIA</string>
    <string name="btn_pagar_otra_tarjeta">PAGAR OTRA TARJETA</string>
    <string name="btn_regresar">REGRESAR</string>
    <string name="btn_nuevo_beneficiario">AGREGAR BENEFICIARIO</string>
    <string name="btn_nuevo">AGREGAR</string>
    <string name="btn_cuentas_beneficiario">AGREGAR CUENTAS AL BENEFICIARIO</string>
    <string name="btn_guardar">GUARDAR</string>
    <string name="btn_actualizar">MODIFICAR</string>
    <string name="btn_eliminar">ELIMINAR</string>
    <string name="btn_cuentas_beneficiario_editar">CUENTAS BENEFICIARIO</string>
    <string name="btn_registrarse">REGISTRARSE</string>
    <string name="btn_reintentar">REINTENTAR</string>
    <string name="btn_confirmar_operacion">CONFIRMAR OPERACIÓN</string>
    <string name="btn_pagar_otros_servicios">PAGAR OTROS SERVICIOS</string>
    <string name="btn_cancelar_pago_servicio">CANCELAR OPERACIÓN</string>
    <string name="btn_agregar_cuenta">AREGAR CUENTA</string>
    <string name="btn_agregar_tarjeta">AREGAR TARJETA</string>
    <string name="btn_validar">VALIDAR</string>
    <string name="btn_reniec">RENIEC</string>
    <string name="btn_otraOpe_voucher_Recarga">EFECTUAR OTRA OPERACIÓN</string>
    <string name="btn_otraReca_voucher_Recarga">EFECTUAR OTRA RECARGA</string>
    <string name="btn_ha_olvidado_clave_acceso">¿HA OLVIDADO SU CLAVE?</string>
    <string name="rdbtn_soles">S/.</string>
    <string name="rdbtn_dolares">US$</string>
    <string name="tv_fr_codigo_interbancario">CÓDIGO INTERBANCARIO</string>
    <string name="tv_fr_numero_tarjeta">NÚMERO DE TARJETA</string>
    <string name="titulo_acceso_sistema">ACCESO AL SISTEMA</string>
    <string name="advertencia_acceso">AL TERCER INTENTO NO VÁLIDO SE LE SOLICITARÁ LA SEGUNDA CLAVE DE AUTENTICACIÓN</string>
    <string name="clave_acceso">CLAVE DE ACCESO</string>
    <string name="lnk_clave_olvidada">¿HAZ OLVIDADO TU CLAVE?</string>
    <string name="tv_ingrese_numero_celular">INGRESE SU NÚMERO DE CELULAR</string>
    <string name="tv_ingrese_clave_acceso">INGRESE SU CLAVE ACCESO</string>
    <string name="ing_informacion_electronica">INGRESO DE INFORMACIÓN ELECTRÓNICA</string>
    <string name="telefono_fijo">Teléfono Fijo</string>
    <string name="telefono_movil">Teléfono Móvil</string>
    <string name="email">e-mail</string>
    <string name="redes_sociales">Redes Sociales</string>
    <string name="selec_servicio_pagar">SELECCIÓN DEL SERVICIO A PAGAR</string>
    <string name="ingreso_num_servicio">INGRESE EL NÚMERO DE SERVICIO</string>
    <string name="hint_ingrese_numero">Ingrese el Número</string>
    <string name="titulo_seleccion_cuenta_abono">REGISTRE SU CUENTA PARA ABONOS O CARGOS</string>
    <string name="selecciona_moneda_cuenta_banco">SELECCIONA LA MONEDA, EL TIPO DE CUENTA Y EL BANCO</string>
    <string name="tv_ingrese_cuenta">Ingrese su número de cuenta CCI</string>
    <string name="monto_depositar">INGRESA EL MONTO A DEPOSITAR</string>
    <string name="hint_ejemplo">EJEMPLO 1,200.00</string>
    <string name="titulo_ingreso_clave_cliente">INGRESO DE CLAVE DE ACCESO DEL CLIENTE</string>
    <string name="ingrese_clave_acceso">INGRESE SU CLAVE DE ACCESO</string>
    <string name="titulo_afiliacion_exitosa">AFILIACIÓN EXITOSA EN CONSULTA</string>
    <string name="afiliacion_terminada">AFILIACIÓN TERMINADA POR EL CLIENTE ALGÚN DATO YA EXISTE EN LA BASE DE DATOS</string>
    <string name="gracias_afiliacion_satisfactoria">GRACIAS, AFILIACION SATISFACTORIA, EN LAS PROXIMAS HORAS LO VISITARÁ UN REPRESENTANTE PARA AUTENTICAR Y ACTIVAR SU AFILIACIÓN.
        POR HABER REGISTRADO DATOS SENSIBLES YA EXISTENTES, LOS VALIDAREMOS CON QUIEN LOS INGRESÓ PREVIAMENTE</string>
    <string name="titulo_ingreso_datos_beneficiario">INGRESO DE DATOS DEL BENEFICIARIO</string>
    <string name="tv_celular1">Celular 1:</string>
    <string name="tv_celular2">Celular 2:</string>
    <string name="tv_email">E-mail:</string>
    <string name="tv_fecha_nac">Fecha Nac.:</string>
    <string name="tv_clave_para_consulta">CLAVE PARA CONSULTA DE ESTADO DE LA TRANSFERENCIA</string>
    <string name="tv_password">Password:</string>
    <string name="tv_re_password">Re-Password:</string>
    <string name="tv_apellido">Apellido:</string>
    <string name="tv_nombre_benef">Nombres:</string>
    <string name="tv_dni_benef">DNI:</string>
    <string name="tv_guardar_transf_recurrente">Guardar Transferencia Recurrente:</string>
    <string name="tv_codigo_interbancario_benef">CÓDIGO DE CUENTA INTERBANCARIO</string>
    <string name="tv_numero_tarjeta_beneficiario">NUMERO DE TARJETA</string>
    <string name="tv_tipo_abonos_beneficiario">TIPO DE ABONOS</string>
    <string name="titulo_afiliacion_comercio">AFILIACIÓN DE COMERCIO</string>
    <string name="tv_ing_clave_acceso">INGRESE SU CLAVE DE ACCESO</string>
    <string name="tv_confirm_clave_acceso">CONFIRME SU CLAVE DE ACCESO</string>
    <string name="tv_ing_correo_elec">INGRESE SU CORREO ELECTRÓNICO</string>
    <string name="tv_int_cel_acceso_inter">INGRESE CELULAR CON ACCESO A INTERNET</string>
    <string name="titulo_rechzo_consumos">RECHAZO DE ANULACIÓN DE CONSUMOS</string>
    <string name="tv_rechazo_operacion">RECHAZO DE OPERACIÓN DE ANULACIÓN</string>
    <string name="titulo_control_importe_max_depositar">CONTROL DEL IMPORTE MÁXIMO A DEPOSITAR</string>
    <string name="tv_control_monto_deposito">CONTROL DEL MONTO DE DEPÓSITOS</string>
    <string name="titulo_rechazo_operador_solicitud_recarga">RECHAZO DEL OPERADOR TELEFÓNICO A LA SOLICITUD DE RECARGA</string>
    <string name="tv_rechazo_operador_servicio">RECHAZO DEL OPERADOR DEL SERVICIO</string>
    <string name="tv_operacion_denegada_op_serv">OPERACIÓN DENEGADA POR EL OPERADOR DEL SERVICIO</string>
    <string name="titulo_saldo_pagar_tarjeta">SALDOS POR PAGAR TARJETA DE CRÉDITO</string>
    <string name="tv_pago_minimo">PAGO MÍNIMO:</string>
    <string name="tv_sol">S/.</string>
    <string name="tv_pago_mensual">PAGO MENSUAL:</string>
    <string name="tv_pago_total">PAGO TOTAL:</string>
    <string name="tv_ver_movimientos">VER MOVIMIENTOS CON EL SUPER AGENTE</string>
    <string name="titulo_relacion_beneficiarios">RELACIÓN DE BENEFICIARIOS</string>
    <string name="tv_reporte_beneficiarios">REPORTE DE BENEFICIARIOS AFILIADOS</string>
    <string name="rbtn_beneficiarioB">Beneficiario B</string>
    <string name="rbtn_beneficiarioC">Beneficiario C</string>
    <string name="rbtn_beneficiarioD">Beneficiario D</string>
    <string name="rbtn_beneficiarioE">Beneficiario E</string>
    <string name="rbtn_beneficiarioF">Beneficiario F</string>
    <string name="rbtn_beneficiarioG">Beneficiario G</string>
    <string name="tv_seleccione_beneficiario">SELECCIONE EL BENEFICIARIO AL CUAL VA A ENVIAR DINERO</string>
    <string name="titulo_ingreso_info_personal">INGRESO DE INFORMACIÓN PERSONAL</string>
    <string name="seleccione_beneficiario">SELECCIONE EL BENEFICIARIO AL CUAL VA A ENVIAR DINERO</string>
    <string name="tv_dni">DNI</string>
    <string name="tv_nombre">NOMBRES</string>
    <string name="tv_ap_paterno">AP. PATERNO</string>
    <string name="tv_ap_materno">AP. MATERNO</string>
    <string name="tv_ap_sexo">SEXO</string>
    <string name="tv_transaccion_exitosa">TRANSACCIÓN EXITOSA</string>
    <string name="tv_rayitas">==========================================</string>
    <string name="tv_superagente_voucher">*** SÚPER AGENTE ***</string>
    <string name="tv_gracias_preferencia">*** GRACIAS POR SU PREFERENCIA ***</string>
    <string name="tv_no">NO</string>
    <string name="tv_servicio_voucher">SERVICIO:</string>
    <string name="tv_num_suministro_voucher">CÓDIGO DEL CLIENTE:</string>
    <string name="tv_pagado_por_voucher">PAGADO POR:</string>
    <string name="tv_numero_unico_voucher">NÚMERO ÚNICO:</string>
    <string name="tv_forma_pago_voucher">FORMA DE PAGO:</string>
    <string name="tv_importe_voucher">IMPORTE:</string>
    <string name="tv_comision_operacion_voucher">COMISIÓN:</string>
    <string name="tv_total_servicio_pagar_voucher">TOTAL:</string>
    <string name="tv_titulo_recarga_conforCli">CONFORMIDAD DEL CLIENTE</string>
    <string name="tv_nom_cli_confor_Recarga">NOMBRE DEL CLIENTE:</string>
    <string name="tv_nro_confor_cliRecarga">NÚMERO DE TELEFONO:</string>
    <string name="tv_tarje_confor_cliRecarga">TARJETA DE PAGO:</string>
    <string name="tv_comi_confor_cliRecarga">COMISIÓN DE RECARGA:</string>
    <string name="tv_total_confor_cliRecarga">TOTAL :</string>
    <string name="btn_confor_confirmaRecarga">CONFIRMAR OPERACIÓN</string>
    <string name="tv_resp_confor_cliRecarga">CRISTOPHER TORRES</string>
    <string name="titulo_voucher_pago_servicios_firma">VOUCHER DE PAGO DEL SERVICIOS CON FIRMA</string>
    <string name="titulo_cambio_contra_operario">CAMBIO DE CONTRASEÑA - OPERARIO</string>
    <string name="tv_contra_actual_operario">CONTRASEÑA ACTUAL</string>
    <string name="tv_nueva_contra_operario">NUEVA CONTRASEÑA</string>
    <string name="tv_confirma_contra_operario">CONFIRMAR CONTRASEÑA</string>
</resources>