<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorfondoactivity"
    tools:context="com.example.ctorres.superagentemovil3.superagente.ConformidadClienteRecarga">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/textViewInfoElectronica"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorFondo"
            android:gravity="center"
            android:text="@string/tv_titulo_recarga_conforCli"
            android:textColor="@color/color_blanco"
            android:textSize="16dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/color_blanco">


        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="19dp"
             android:text="@string/tv_nom_cli_confor_Recarga"
             />

        <TextView
            android:id="@+id/txt_confor_nomCli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:textStyle="bold" />

    </LinearLayout>
        </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:background="@color/color_blanco"
            android:text="@string/tv_nro_confor_cliRecarga" />

        <TextView
            android:id="@+id/txt_confor_fonoCli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_blanco"
            android:gravity="right"
            android:text="@string/tv_resp_confor_cliRecarga" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:background="@color/color_blanco"
            android:text="@string/tv_tarje_confor_cliRecarga" />

        <TextView
            android:id="@+id/txt_confor_tarjetaCli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_blanco"
            android:gravity="right"
            android:text="@string/tv_resp_confor_cliRecarga" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_confor_tipoMoneda"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@color/color_blanco"
            android:gravity="center"
            android:text="@string/tv_total_confor_cliRecarga" />

        <TextView
            android:id="@+id/txt_confor_Monto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_blanco"
            android:gravity="right"
            android:layout_marginLeft="2dp"
            android:textColor="@color/color_rojo"
            android:text="@string/tv_no" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:background="@color/color_blanco"
            android:text="@string/tv_comi_confor_cliRecarga" />

        <TextView
            android:id="@+id/txt_confor_comisionRecarga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_blanco"
            android:gravity="right"
            android:text="@string/tv_resp_confor_cliRecarga" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@color/color_blanco"
            android:text="@string/tv_total_confor_cliRecarga" />

        <TextView
            android:id="@+id/txt_confor_totalPagar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_blanco"
            android:gravity="right"
            android:layout_marginLeft="2dp"
            android:textColor="@color/color_rojo"
            android:text="@string/tv_no" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_confirmarRecarga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_confor_confirmaRecarga" />

    </LinearLayout>




</LinearLayout>
